--- a/包装后段测试.csproj
+++ b/包装后段测试.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Abpick.cs" />
     <Compile Include="Autoit.cs" />
     <Compile Include="Dapapi.cs" />
+    <Compile Include="error_alarm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -67,6 +68,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Result_back.cs" />
+    <Compile Include="select_or_send.cs" />
     <Compile Include="Web References\WebReference\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
